--- a/Hello World/Packages/manifest.json
+++ b/Hello World/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.3.0",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
